--- a/static/root.css
+++ b/static/root.css
@@ -1,26 +1,37 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
 }
 
-:root{
-    --button-height: 32px;
-    --font-size: 14px;
-    --button-bg: white;
-    --button-active-bg: #eee;
-    --border-radius: 4px;
-    --color: #333;
-    --border-color: #999;
-    --border-color-hover: #666;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --button-height: 32px;
+  --font-size: 14px;
+  --button-active-bg: #ededed;
+  --border-radius: 4px;
+  --color: #333;
+  --border-color: #999;
+  --border-color-hover: #666;
+}
+
+:root {
+  --button-bg: white;
 }
 
 
 #app {
-    margin: 20px;
+  margin: 20px;
 }
 
 
 body {
-    font-size: var(--font-size);
+  font-size: var(--font-size);
 }
